salesforce/force-app/main/default/objects/CoSeal_Settings__c/CoSeal_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>SendSign API connection settings. Configure your SendSign instance URL, API key, and defaults.</description>
    <label>SendSign Settings</label>
</CustomObject>