salesforce/force-app/main/default/objects/CoSeal_Settings__c/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <description>CoSeal API key for authentication. Generate this from your CoSeal admin panel.</description>
    <label>API Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>