salesforce/force-app/main/default/objects/CoSeal_Settings__c/fields/API_URL__c.field-meta.xml
<CustomField>
    <fullName>API_URL__c</fullName>
    <description>Base URL of your CoSeal instance (e.g., https://coseal.yourcompany.com)</description>
    <label>API URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>