salesforce/force-app/main/default/objects/CoSeal_Settings__c/fields/Default_Template__c.field-meta.xml
<CustomField>
    <fullName>Default_Template__c</fullName>
    <description>Optional: UUID of the default CoSeal template to use when sending documents.</description>
    <label>Default Template</label>
    <length>36</length>
    <type>Text</type>
</CustomField>